# SQL_QT_Library

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resourses.qrc
core/: bookfiltermanager.h  database.h
dialogs/: checkoutdialog.cpp  checkoutdialog.h  checkoutdialog.ui  logindialog.cpp  logindialog.h  logindialog.ui  profiledialog.cpp  profiledialog.h  profiledialog.ui
models/: database_author.cpp  database_book.cpp  database_cart.cpp  database_comment.cpp  database_connection.cpp  database_customer.cpp  database_order.cpp  datatypes.h
sql/: author_queries.sql  award_loyalty_trigger.sql  book_queries.sql  cart_queries.sql  comment_queries.sql  customer_queries.sql  loyalty_trigger.sql  order_queries.sql  schema.sql
sql/functions/: calculate_average_rating.sql
utils/: searchsuggestiondelegate.cpp  searchsuggestiondelegate.h  testdata.cpp  testdata.h
widgets/: RangeSlider.cpp  RangeSlider.h  starratingwidget.cpp  starratingwidget.h
windows/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_authors.cpp  mainwindow_books.cpp  mainwindow_cart.cpp  mainwindow_comments.cpp  mainwindow_orders.cpp  mainwindow_profile.cpp  mainwindow_search.cpp  mainwindow_utils.cpp
